test/fixtures/astRegression/shouldSucceed/FullyQualifiedTypes.sand
pub class FullyQualifiedTypes {
    foo(): java.util.ArrayList<String> {

    }

    bar(): java.util.ArrayList<String?>? {
        
    }

    baz(): java.util.ArrayList? {

    }
}