test/fixtures/astRegression/shouldFail/nullable/DoubleNullable.sand
pub class DoubleNullable {
    foo(): String?? {
        
    }
}